README link to NyAR_JS

--- a/README
+++ b/README
@@ -7,6 +7,9 @@ Mozilla Web O’ Wonder
 See remixingreality/demo.html
 
 
+For the AR library, see https://github.com/kig/NyAR_JS
+
+
 --------
 Credits:
   Ilmari Heikkinen -- Code & music visualizer theme
